<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EMS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="fire">Fire</string>
    <string name="dialog_fire_missiles">Fire Missiles</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="createAccount">Create Account</string>
    <string name="title_activity_employee_login">User Login</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="createUserDetails">User Details</string>
    <string name="desiredUsername">Desired Username</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="employeeupdated">Employee Updated Successfully</string>
    <string name="create">Create</string>
    <string name="reset">Reset</string>
    <string name="firstname">First Name</string>
    <string name="areyousure">Are you sure?</string>
    <string name="employeedeletedsuccessfully">Employee Deleted Successfully</string>
    <string name="unabletodeleteemployee">Unable to delete Employee</string>
    <string name="lastname">Last Name</string>
    <string name="age">Age</string>
    <string name="usernamedoesnotexists">Username does not exists.</string>
    <string name="warning">Warning</string>
    <string name="btnedit">Edit</string>
    <string name="usernameexists">Username already exists</string>
    <string name="btndelete">Delete</string>
    <string name="designation">Designation</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="error">Error</string>
    <string name="passwordmismatch">Password Mismatch</string>
    <string name="ok">OK</string>
    <string name="gender">Gender</string>
    <string name="employeeadded">Employee Added Successfully</string>
    <string name="success">Success</string>
    <string name="incompletelogindetails">Please fill all the details</string>
    <string name="blankfname">First Name cannot be blank</string>
    <string name="blanklname">Last Name cannot be blank</string>
    <string name="blankage">Age cannot be blank</string>
    <string name="blankusername">Username cannot be blank</string>
    <string name="blankpassword">Password cannot be blank</string>
    <string name="blankconfirmpassword">Confirm Password cannot be blank</string>
    <string name="ageerror">Incorrect Age</string>
    <string name="notauthorised">You are Not Authorised to join. Please check your age</string>
    <string name="gendererror">Please select your gender</string>
    <string name="suretoreset">Are you sure to Reset?</string>
    <string name="update">Update</string>

    <string-array name="designation_array">
        <item>Trainee</item>
        <item>Developer</item>
        <item>Manager</item>
        <item>Lead Tech</item>
        <item>Office Boy</item>
        <item>Intern</item>
        <item>HR Dept.</item>
        <item>CEO</item>
    </string-array>
    <string-array name="type_array">
        <item>Admin</item>
        <item>User</item>
    </string-array>

    <string name="title_activity_show_data">ShowDataActivity</string>
    <string name="title_activity_show_employees">ShowEmployeesActivity</string>
    <string name="invalidusernameorpassword">Invalid Username/Password.</string>
    <string name="title_activity_edit_employee">EditEmployeeActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="action_search_heading">Search</string>
    <string name="title_activity_view_user">ViewUser</string>
    <string name="title_activity_user">UserActivity</string>

</resources>