<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".CreateAccountActivity" >

        <TextView
            android:id="@+id/textViewUserDetails"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/createUserDetails"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/createFname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewUserDetails"
            android:hint="@string/firstname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/createLname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/createFname"
            android:hint="@string/lastname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/createAge"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/createLname"
            android:hint="@string/age"
            android:inputType="number" />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/createAge"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>

        <Spinner
            android:id="@+id/createDesignation"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/radiogroup" />

        <Spinner
            android:id="@+id/createType"
            android:layout_width="130sp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/radiogroup" />

        <EditText
            android:id="@+id/createUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/createDesignation"
            android:hint="@string/desiredUsername"
            android:inputType="text" />

        <EditText
            android:id="@+id/createPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/createUsername"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/createConfirmPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/createPassword"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/createConfirmPassword"
            android:onClick="createUser"
            android:text="@string/create" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/createConfirmPassword"
            android:onClick="resetForm"
            android:text="@string/reset" />
    </RelativeLayout>

</ScrollView>