<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".EditEmployeeActivity" >

        <TextView
            android:id="@+id/editUserDetails"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/createUserDetails"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editFname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editUserDetails"
            android:hint="@string/firstname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editLname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editFname"
            android:hint="@string/lastname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editAge"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/editLname"
            android:hint="@string/age"
            android:inputType="number" />

        <RadioGroup
            android:id="@+id/editradiogroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editAge"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/editradioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/editradioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>

        <Spinner
            android:id="@+id/editDesignation"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/editradiogroup" />

        <Spinner
            android:id="@+id/editType"
            android:layout_width="130sp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/editradiogroup" />

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editDesignation"
            android:focusable="false"
            android:hint="@string/desiredUsername" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editUsername"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editConfirmPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editPassword"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/editcreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editConfirmPassword"
            android:onClick="updateUser"
            android:text="@string/update" />
    </RelativeLayout>

</ScrollView>